[Anil] fixed overlapping of language button with text box

--- a/vikalp/static/css/_common_responsive.css.scss
+++ b/vikalp/static/css/_common_responsive.css.scss
@@ -119,6 +119,14 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+  .search-box-wrapper{
+    width:100px;
+    margin-right: 30px;
+    .form-control{
+      width: inherit;
+      padding-right: 25px;
+    }
+  }
   .navbar-default .navbar-nav > li > a {
     font-size: .7em;
   }
@@ -141,6 +149,14 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
+  .search-box-wrapper{
+    width:130px;
+    margin-right: 30px;
+    .form-control{
+      width: inherit;
+      padding-right: 25px;
+    }
+  }
   .navbar-default .navbar-nav > li > a {
     font-size: 0.7em;
   }
