--- a/vikalp/static/css/output/application.css
+++ b/vikalp/static/css/output/application.css
@@ -5512,6 +5512,13 @@ a.carousel-control.right {
   .logos-collection .dds {
     float: left; } }
 @media (min-width: 768px) and (max-width: 991px) {
+  .search-box-wrapper {
+    width: 100px;
+    margin-right: 30px; }
+    .search-box-wrapper .form-control {
+      width: inherit;
+      padding-right: 25px; }
+
   .navbar-default .navbar-nav > li > a {
     font-size: .7em; }
 
@@ -5531,6 +5538,13 @@ a.carousel-control.right {
     border-right: 0px none;
     padding-right: 15px; } }
 @media (min-width: 992px) and (max-width: 1199px) {
+  .search-box-wrapper {
+    width: 130px;
+    margin-right: 30px; }
+    .search-box-wrapper .form-control {
+      width: inherit;
+      padding-right: 25px; }
+
   .navbar-default .navbar-nav > li > a {
     font-size: 0.7em; } }
 .footer {
